--- a/auric_consulting/site-plan.html
+++ b/auric_consulting/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Our Services</a>
+        <a href="#">Meet the team</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Our Services <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Meet the team  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,30 +125,31 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The purpose of the website is to advertise the company("Auric") services to possible clients. This includes Auric former clients and a brief introduction on the company profile and services. 
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/location.jpg" alt="generic consulting photo">
+        <img src="images/photo2.JPG" alt="photo of the office building">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Our Services</h3>
       <p>
-        [Written copy for the Page 2 here]
+        This is the what we do section. On this page must get covered the services Auric offers. They include development of Corporate Strategy, Business Strategy, and Functional Strategy. Explore, identify, and seize new business opportunities. Merges and aquisitions consulting. Organizational effectiveness 
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/hero.jpeg" alt="image for page">
+        <img src="images/photo1.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Meet the team</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This is the how we do it. In my opinion in strategy consulting former experience is the most valuable asset. This is the why of this section. I think here there can be a brief introduction to the team members and their experience and capabilities.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
-
+        <img src="images/man.png" alt="man 1">
+        <img src="images/man (3).png" alt="man 2">
+        <img src="images/man (2).png" alt="man 3">
+        <img src="images/man (4).png" alt="man 4">
       </ul>
       <hr>
       <h2>
