--- a/auric_consulting/site-plan.html
+++ b/auric_consulting/site-plan.html
@@ -162,19 +162,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage_wireframe.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/ourservices_wireframe.png" alt="our services wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/team_wireframe.png" alt="meet the team wireframe">
     </main>
   </body>
 
