--- a/auric_consulting/site-plan.html
+++ b/auric_consulting/site-plan.html
@@ -160,19 +160,19 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+       
       </p>
       <img src="images/homepage_wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Our Services</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        3 section with a description of the what we do
       </p>
       <img src="images/ourservices_wireframe.png" alt="our services wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Meet the team</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Pictures of the team members and a brief description of experience and educational background.
       </p>
       <img src="images/team_wireframe.png" alt="meet the team wireframe">
     </main>
