--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -116,7 +116,7 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Frecuent Asked Questions</h3>
     <img src="images/home_wireframe.png" alt="FAQ page wireframe" />
   </main>
 </body>
