--- a/wwr/faqs.html
+++ b/wwr/faqs.html
@@ -15,7 +15,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="faq.html">FAQ's</a>
+                <a href="faqs.html">FAQ's</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
