--- a/auric_consulting/index.html
+++ b/auric_consulting/index.html
@@ -14,35 +14,51 @@
                 <img src="images/logo.png" class="logo">
                 <div class="header-right">
                   <a class="active" href="index.html">Home</a>
-                  <a href="#contact">Contact</a>
-                  <a href="#about">About</a>
+                  <a href="#contact">Our Services</a>
+                  <a href="#about">Meet the team</a>
                 </div>
               </div>
         </header>
+        <main>
+            <section class="intro">
+                <p class="description">We are a strategy and business management consulting firm focused on the development and implementation of effective, high impact solutions tailored to our customer’s needs. We started operations in 2000, and in our first 15 years we have completed more than 300 projects, working both with companies and nonprofit organizations.</p>
+                <img class="image-header" src="images/location.jpg" alt="Auric Office">
+            </section>
+            <section class="clients">
+                <h1>Our clients</h1>
+                <div class="logo">
+                    <img class="logo-img logo--1" src="images/ALFA_logo.png" alt="Logo Alfa">
+                    <img class="logo-img logo--2" src="images/cemex_logo.png" alt="Logo Cemex">
+                    <img class="logo-img logo--3" src="images/Coca-Cola-logo.png" alt="Logo Coca-Cola">
+                    <img class="logo-img logo--4" src="images/femsa_logo.png" alt="Logo FEMSA">
+                    <img class="logo-img logo--5" src="images/Heineken-Logo.png" alt="Logo Heineken">
+                    <img class="logo-img logo--6" src="images/javer_logo.jpg" alt="Logo Javer">
+                    <img class="logo-img logo--7" src="images/Logo-Construrama.png" alt="Logo Construrama">
+                    <img class="logo-img logo--8" src="images/logo-lamosa.png" alt="Logo LAMOSA">
+                    <img class="logo-img logo--9" src="images/logo-ternium.png" alt="Logo Ternium">
+                    <img class="logo-img logo--10" src="images/oxxo_logo.png" alt="Logo OXXO">
+                    <img class="logo-img logo--11" src="images/Sigma_Alimentos_logotipo.png" alt="Logo Sigma">
+                    <img class="logo-img logo--12" src="images/waxie-logo.jpg" alt="Logo Waxie">
+
+                </div>
+            </section>
+        </main>  
         <footer>
-            <div class="footer-content">
-                <h3>Auric Consulting</h3>
-                <!--<p>Raj Template is a blog website where you will find great tutorials on web design and development. Here each tutorial is beautifully described step by step with the required source code.</p>-->
-                <ul class="socials">
-                    <li><a href="https://facebook.com"><i class="fa fa-facebook"></i>
-                        <img src="images/facebook.png" alt="facebook"></a></li>
-                    <li><a href="https://twitter.com"><i class="fa fa-twitter"></i>
-                        <img src="images/twitter.png" alt="twitter"></a></li>
-                    <li><a href="https://instagram.com"><i class="fa fa-google-plus"></i>
-                        <img src="images/instagram.png" alt="instagram"></a></li>
-                </ul>
+            <p>Auric Consulitng © 2023 Alan Sánchez</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
             </div>
-            <div class="footer-bottom">
-                <p>copyright &copy; <a href="index.html">Alan Sánchez 2023</a>  </p>
-                        <div class="footer-menu">
-                          <ul class="f-menu">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Contact</a></li>
-                          </ul>
-                        </div>
-            </div>
-        </footer>    
-    </div>
+        </footer> 
+    </div>  
 </body>
 </html>
