--- a/poem/poem.html
+++ b/poem/poem.html
@@ -9,23 +9,23 @@
 </head>
 <body>
     <div class="content">
-        <section class="block1">
+        <section id="block1">
             <h1>The Cataract of Lodore</h1>
             <p>...The cataract strong </p>
             <p>Then plunges along,</p>
             <p>Striking and raging</p>
         </section>
-        <section class="block2">
+        <section id="block2">
             <p>As if a war waging Its caverns and rocks among;</p>
             <p>Rising and leaping, sinking and creeping,</p>
             <p>Swelling and sweeping, Showering and springing</p>
         </section>
-        <section class="block3">
+        <section id="block3">
             <p>Flying and flinging, Writhing and ringing</p>
             <p>Eddying and whisking, spouting and frisking</p>
             <p>Turning and twisting,</p>
         </section>
-        <section class="block4">
+        <section id="block4">
             <p>Around and around With endless rebound:</p>
             <p>Smiting and fighting, A sight to delight in;</p>
             <p>Confounding, astounding, Dizzying and deafening </p>
