--- a/auric_consulting/index.html
+++ b/auric_consulting/index.html
@@ -14,7 +14,7 @@
                 <img src="images/logo.png" class="logo">
                 <div class="header-right">
                   <a class="active" href="index.html">Home</a>
-                  <a href="#contact">Our Services</a>
+                  <a href="our-services.html">Our Services</a>
                   <a href="#about">Meet the team</a>
                 </div>
               </div>
