--- a/auric_consulting/index.html
+++ b/auric_consulting/index.html
@@ -15,7 +15,8 @@
                 <div class="header-right">
                   <a class="active" href="index.html">Home</a>
                   <a href="our-services.html">Our Services</a>
-                  <a href="#about">Meet the team</a>
+                  <a href="meet-team.html">Meet the team</a>
+                  <a href="site-plan.html">Site Plan</a>
                 </div>
               </div>
         </header>
@@ -28,9 +29,9 @@
                 <h1>Our clients</h1>
                 <div class="logo">
                     <img class="logo-img logo--1" src="images/ALFA_logo.png" alt="Logo Alfa">
-                    <img class="logo-img logo--2" src="images/cemex_logo.png" alt="Logo Cemex">
+                    <img class="logo-img logo--2" src="images/cemex.jpeg" alt="Logo Cemex">
                     <img class="logo-img logo--3" src="images/Coca-Cola-logo.png" alt="Logo Coca-Cola">
-                    <img class="logo-img logo--4" src="images/femsa_logo.png" alt="Logo FEMSA">
+                    <img class="logo-img logo--4" src="images/Envoy_Solutions_logo_.svg" alt="Logo Envoy">
                     <img class="logo-img logo--5" src="images/Heineken-Logo.png" alt="Logo Heineken">
                     <img class="logo-img logo--6" src="images/javer_logo.jpg" alt="Logo Javer">
                     <img class="logo-img logo--7" src="images/Logo-Construrama.png" alt="Logo Construrama">
