--- a/auric_consulting/index.html
+++ b/auric_consulting/index.html
@@ -22,7 +22,7 @@
         </header>
         <main>
             <section class="intro">
-                <p class="description">We are a strategy and business management consulting firm focused on the development and implementation of effective, high impact solutions tailored to our customer’s needs. We started operations in 2000, and in our first 15 years we have completed more than 300 projects, working both with companies and nonprofit organizations.</p>
+                <p class="description">We are a <span class="emphasize">strategy and business management consulting</span> firm focused on the development and implementation of effective, high impact solutions tailored to our customer’s needs. We started operations in 2000, and in our first 20 years we have completed more than 400 projects, working both with companies and nonprofit organizations.</p>
                 <img class="image-header" src="images/location.jpg" alt="Auric Office">
             </section>
             <section class="clients">
@@ -34,8 +34,8 @@
                     <img class="logo-img logo--4" src="images/Envoy_Solutions_logo_.svg" alt="Logo Envoy">
                     <img class="logo-img logo--5" src="images/Heineken-Logo.png" alt="Logo Heineken">
                     <img class="logo-img logo--6" src="images/javer_logo.jpg" alt="Logo Javer">
-                    <img class="logo-img logo--7" src="images/Logo-Construrama.png" alt="Logo Construrama">
-                    <img class="logo-img logo--8" src="images/logo-lamosa.png" alt="Logo LAMOSA">
+                    <img class="logo-img logo--7" src="images/indelpro.jpg" alt="Logo Indelpro">
+                    <img class="logo-img logo--8" src="images/fanosa_logo.png" alt="Logo FANOSA">
                     <img class="logo-img logo--9" src="images/logo-ternium.png" alt="Logo Ternium">
                     <img class="logo-img logo--10" src="images/oxxo_logo.png" alt="Logo OXXO">
                     <img class="logo-img logo--11" src="images/Sigma_Alimentos_logotipo.png" alt="Logo Sigma">
