--- a/auric_consulting/index.html
+++ b/auric_consulting/index.html
@@ -45,9 +45,8 @@
             </section>
         </main>  
         <footer>
-            <p>Auric Consulitng © 2023 Alan Sánchez</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
+            <p>Auric Consulting © 2023 Alan Sánchez</p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
@@ -59,7 +58,7 @@
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
-        </footer> 
+        </footer>  
     </div>  
 </body>
 </html>
