--- a/auric_consulting/index.html
+++ b/auric_consulting/index.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <div class="header">
-                <img src="images/logo.png" class="logo">
+                <img src="images/logo.png" class="logo" alt="Auric Logo"">
                 <div class="header-right">
                   <a class="active" href="index.html">Home</a>
                   <a href="our-services.html">Our Services</a>
@@ -21,11 +21,11 @@
               </div>
         </header>
         <main>
-            <section class="intro">
+            <div class="intro">
                 <p class="description">We are a <span class="emphasize">strategy and business management consulting</span> firm focused on the development and implementation of effective, high impact solutions tailored to our customer’s needs. We started operations in 2000, and in our first 20 years we have completed more than 400 projects, working both with companies and nonprofit organizations.</p>
                 <img class="image-header" src="images/location.jpg" alt="Auric Office">
-            </section>
-            <section class="clients">
+            </div>
+            <div class="clients">
                 <h1>Our clients</h1>
                 <div class="logo">
                     <img class="logo-img logo--1" src="images/ALFA_logo.png" alt="Logo Alfa">
@@ -42,7 +42,7 @@
                     <img class="logo-img logo--12" src="images/waxie-logo.jpg" alt="Logo Waxie">
 
                 </div>
-            </section>
+            </div>
         </main>  
         <footer>
             <p>Auric Consulting © 2023 Alan Sánchez</p>
