--- a/auric_consulting/meet-team.html
+++ b/auric_consulting/meet-team.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <div class="header">
-                <img src="images/logo.png" class="logo">
+                <img src="images/logo.png" class="logo" alt="Auric Logo">
                 <div class="header-right">
                   <a href="index.html">Home</a>
                   <a href="our-services.html">Our Services</a>
@@ -27,11 +27,11 @@
                     <h2>Partner 1 </h2>
                 </section>
                 <section class="partner-2">
-                    <img class="partner-img" src="images/man (2).png" alt="Man Picture">
+                    <img class="partner-img" src="images/man-2.png" alt="Man Picture">
                     <h2>Partner 2 </h2>
                 </section>
                 <section class="partner-3">
-                    <img class="partner-img" src="images/man (3).png" alt="Man Picture">
+                    <img class="partner-img" src="images/man-3.png" alt="Man Picture">
                     <h2>Partner 3 </h2>
                 </section>
             </div>
@@ -41,31 +41,31 @@
                     <h2>Consultant 1 </h2>
                 </section>
                 <section class="consultant-2">
-                    <img class="consultant-img" src="images/man (2).png" alt="Man Picture">
+                    <img class="consultant-img" src="images/man-2.png" alt="Man Picture">
                     <h2>Consultant 2 </h2>
                 </section>
                 <section class="consultant-3">
-                    <img class="consultant-img" src="images/man (5).png" alt="Man Picture">
+                    <img class="consultant-img" src="images/man-5.png" alt="Man Picture">
                     <h2>Consultant 3 </h2>
                 </section>
                 <section class="consultant-4">
-                    <img class="consultant-img" src="images/man (4).png" alt="Man Picture">
+                    <img class="consultant-img" src="images/man-4.png" alt="Man Picture">
                     <h2>Consultant 4 </h2>
                 </section>
                 <section class="consultant-5">
-                    <img class="consultant-img" src="images/man (5).png" alt="Man Picture">
+                    <img class="consultant-img" src="images/man-5.png" alt="Man Picture">
                     <h2>Consultant 5 </h2>
                 </section>
                 <section class="consultant-6">
-                    <img class="consultant-img" src="images/man (3).png" alt="Man Picture">
+                    <img class="consultant-img" src="images/man-3.png" alt="Man Picture">
                     <h2>Consultant 6 </h2>
                 </section>
                 <section class="consultant-7">
-                    <img class="consultant-img" src="images/man (4).png" alt="Man Picture">
+                    <img class="consultant-img" src="images/man-4.png" alt="Man Picture">
                     <h2>Consultant 7 </h2>
                 </section>
                 <section class="consultant-8">
-                    <img class="consultant-img" src="images/man (3).png" alt="Man Picture">
+                    <img class="consultant-img" src="images/man-3.png" alt="Man Picture">
                     <h2>Consultant 8 </h2>
                 </section>
             </div>
