--- a/auric_consulting/index.html
+++ b/auric_consulting/index.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <div class="header">
-                <img src="images/logo.png" class="logo" alt="Auric Logo"">
+                <img src="images/logo.png" class="logo" alt="Auric Logo">
                 <div class="header-right">
                   <a class="active" href="index.html">Home</a>
                   <a href="our-services.html">Our Services</a>
