--- a/auric_consulting/index.html
+++ b/auric_consulting/index.html
@@ -48,13 +48,13 @@
             <p>Auric Consulting © 2023 Alan Sánchez</p>
             <p><a href="site-plan.html">Site Plan</a></p>
             <div class="social">
-                <a href="https://facebook.com" target="_blank">
+                <a href="https://www.facebook.com/AuricCo/" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
                     <img src="images/twitter.png" alt="twitter icon">
                 </a>
-                <a href="https://instagram.com" target="_blank">
+                <a href="https://www.instagram.com/auricconsultingmx" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
