--- a/auric_consulting/meet-team.html
+++ b/auric_consulting/meet-team.html
@@ -71,21 +71,20 @@
             </div>
         </main> 
         <footer>
-            <p>Auric Consulitng © 2023 Alan Sánchez</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
+            <p>Auric Consulting © 2023 Alan Sánchez</p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <div class="social">
-                <a href="https://facebook.com" target="_blank">
+                <a href="https://www.facebook.com/AuricCo/" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
                     <img src="images/twitter.png" alt="twitter icon">
                 </a>
-                <a href="https://instagram.com" target="_blank">
+                <a href="https://www.instagram.com/auricconsultingmx" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
-        </footer> 
+        </footer>   
     </div>  
 </body>
 </html>
