--- a/auric_consulting/meet-team.html
+++ b/auric_consulting/meet-team.html
@@ -81,7 +81,7 @@
                     <img src="images/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://www.instagram.com/auricconsultingmx" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="images/instagram.png" alt="instagram Icon">
                 </a>
             </div>
         </footer>   
