--- a/auric_consulting/meet-team.html
+++ b/auric_consulting/meet-team.html
@@ -16,6 +16,7 @@
                   <a href="index.html">Home</a>
                   <a href="our-services.html">Our Services</a>
                   <a class="active" href="meet-team.html">Meet the team</a>
+                  <a href="contact-us.html">Contact Us</a>
                   <a href="site-plan.html">Site Plan</a>
                 </div>
               </div>
